# FaRust

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs
templates/: icon_template.tsx
